# Assignment-of-Orthologous-Genes-in-Unbalanced-Genomes-Using-Cycle-Packing-of-Adjacency-Graphs

./: CMakeLists.txt  Makefile  README.md  main_dec.cpp  main_dist.cpp  test.cpp
cycle/: cycles.cpp  cycles.hpp
db/: README.md
db/SREV100/: L100_SREV100.txt  L10_SREV100.txt  L20_SREV100.txt  L30_SREV100.txt  L40_SREV100.txt  L50_SREV100.txt  L60_SREV100.txt  L70_SREV100.txt  L80_SREV100.txt  L90_SREV100.txt
db/SREV25/: L100_SREV25.txt  L10_SREV25.txt  L20_SREV25.txt  L30_SREV25.txt  L40_SREV25.txt  L50_SREV25.txt  L60_SREV25.txt  L70_SREV25.txt  L80_SREV25.txt  L90_SREV25.txt
db/SREV50/: L100_SREV50.txt  L10_SREV50.txt  L20_SREV50.txt  L30_SREV50.txt  L40_SREV50.txt  L50_SREV50.txt  L60_SREV50.txt  L70_SREV50.txt  L80_SREV50.txt  L90_SREV50.txt
db/SREV75/: L100_SREV75.txt  L10_SREV75.txt  L20_SREV75.txt  L30_SREV75.txt  L40_SREV75.txt  L50_SREV75.txt  L60_SREV75.txt  L70_SREV75.txt  L80_SREV75.txt  L90_SREV75.txt
db/SREV_TRANS100/: L100_SREV_TRANS100.txt  L10_SREV_TRANS100.txt  L20_SREV_TRANS100.txt  L30_SREV_TRANS100.txt  L40_SREV_TRANS100.txt  L50_SREV_TRANS100.txt  L60_SREV_TRANS100.txt  L70_SREV_TRANS100.txt  L80_SREV_TRANS100.txt  L90_SREV_TRANS100.txt
db/SREV_TRANS25/: L100_SREV_TRANS25.txt  L10_SREV_TRANS25.txt  L20_SREV_TRANS25.txt  L30_SREV_TRANS25.txt  L40_SREV_TRANS25.txt  L50_SREV_TRANS25.txt  L60_SREV_TRANS25.txt  L70_SREV_TRANS25.txt  L80_SREV_TRANS25.txt  L90_SREV_TRANS25.txt
db/SREV_TRANS50/: L100_SREV_TRANS50.txt  L10_SREV_TRANS50.txt  L20_SREV_TRANS50.txt  L30_SREV_TRANS50.txt  L40_SREV_TRANS50.txt  L50_SREV_TRANS50.txt  L60_SREV_TRANS50.txt  L70_SREV_TRANS50.txt  L80_SREV_TRANS50.txt  L90_SREV_TRANS50.txt
db/SREV_TRANS75/: L100_SREV_TRANS75.txt  L10_SREV_TRANS75.txt  L20_SREV_TRANS75.txt  (+7 more)
distance_algorithms/: aux.cpp  aux.hpp  r_or_rt_noir.cpp  r_or_rt_noir.hpp  reversal4.cpp  reversal4.hpp  reversal_transposition45.cpp  reversal_transposition45.hpp  transposition3.cpp  transposition3.hpp
heur/: ga.cpp  ga.hpp
misc/: dist.hpp  genome.cpp  genome.hpp  io.cpp  io.hpp  permutation.cpp  permutation.hpp  reduction_rules.cpp  reduction_rules.hpp
(+2 files in other folders)
